# project_skypro

./: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: transactions.csv
src/: decorators.py  external_api.py  generators.py  masks.py  operation.py  processing.py  re_operation.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_operation.py  test_processing.py  test_widget.py
