[tool.poetry]
name = "project_skypro"
version = "0.1.0"
description = "A short description of your project."
authors = ["Yana <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.3"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88              # Максимальная длина строки
target-version = ['py38', 'py39', 'py310', 'py311', 'py312'] # Поддерживаемые версии Python (уточните свои)
include = '\.pyi?$'          # Включаемые файлы (обычно .py и .pyi)
exclude = '''
(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)
'''

[tool.isort]
profile = "black"             # Используйте профиль black для согласованности
line_length = 88              # Соответствует Black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.mypy]
python_version = "3.11"       # Версия Python для проверки типов
strict = true                 # Включить все строгие проверки (рекомендуется)
show_column_numbers = true
show_error_context = true
ignore_missing_imports = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[[tool.mypy.overrides]]
module = "tests.*"            # Игнорировать ошибки для тестовых файлов
ignore_errors = true

